# cpp-trading-system

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  PROJECT_STATUS.md  README.md  docker-compose.yml
apps/: demo_main.cpp
deployment/prometheus/: prometheus.yml
docs/: account-context-ddd.md  account-context-implementation.md  business-flows.md  channel-context-ddd.md  cpp-engine-fallback-strategy.md  exchange-context-ddd.md  java-fallback-strategy.md  notification-context-ddd.md  risk-context-ddd.md  settlement-context-ddd.md  trading-context-ddd.md  user-context-ddd.md  user-context-implementation.md
include/trading/: order.hpp  order_book.hpp  risk_manager.hpp  trading_system.hpp  types.hpp
scripts/: build-all.sh  create-all-service-poms.sh  create-new-service-poms.sh  generate-service-poms.sh  git-commit-phase2.1.sh  git-commit-phase2.2.sh  start-dev-env.sh  stop-dev-env.sh
src/: order_book.cpp  trading_system.cpp
tests/: trading_system_test.cpp
trading-business/: pom.xml
trading-business/account-service/: pom.xml
trading-business/account-service/account-application/: pom.xml
trading-business/account-service/account-domain/: pom.xml
trading-business/account-service/account-infrastructure/: pom.xml
trading-business/account-service/account-interfaces/: pom.xml
trading-business/channel-service/: pom.xml
trading-business/channel-service/channel-application/: pom.xml
trading-business/channel-service/channel-domain/: pom.xml
trading-business/channel-service/channel-infrastructure/: pom.xml
trading-business/channel-service/channel-interfaces/: pom.xml
trading-business/common/: pom.xml
trading-business/exchange-service/: pom.xml
trading-business/exchange-service/exchange-application/: pom.xml
trading-business/exchange-service/exchange-domain/: pom.xml
trading-business/exchange-service/exchange-infrastructure/: pom.xml
trading-business/exchange-service/exchange-interfaces/: pom.xml
trading-business/notification-service/: pom.xml
trading-business/notification-service/notification-application/: pom.xml
trading-business/notification-service/notification-domain/: pom.xml
trading-business/order-service/: pom.xml
trading-business/order-service/order-application/: pom.xml
trading-business/risk-service/: pom.xml
trading-business/settlement-service/: pom.xml
trading-business/user-service/: pom.xml
trading-engine/: CMakeLists.txt
trading-query/: go.mod
(+122 files in other folders)
